--- a/.gitignore
+++ b/.gitignore
@@ -348,3 +348,4 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+H1_lomme/.vs/H1_lomme/DesignTimeBuild/.dtbcache.v2
