--- a/.gitignore
+++ b/.gitignore
@@ -358,3 +358,5 @@ H1_lomme/H1_lomme/obj/H1_lomme.csproj.nuget.g.props
 H1_lomme/H1_lomme/obj/project.assets.json
 H1_lomme/H1_lomme/obj/project.nuget.cache
 *.cache
+*.v2
+H1_lomme/.vs/H1_lomme/v17/.suo
