--- a/.gitignore
+++ b/.gitignore
@@ -360,3 +360,5 @@ H1_lomme/H1_lomme/obj/project.nuget.cache
 *.cache
 *.v2
 H1_lomme/.vs/H1_lomme/v17/.suo
+H1_lomme/H1_lomme/obj/Debug/net7.0/H1_lomme.assets.cache
+H1_lomme/.vs/H1_lomme/v17/.suo
