--- a/.gitignore
+++ b/.gitignore
@@ -362,3 +362,4 @@ H1_lomme/H1_lomme/obj/project.nuget.cache
 H1_lomme/.vs/H1_lomme/v17/.suo
 H1_lomme/H1_lomme/obj/Debug/net7.0/H1_lomme.assets.cache
 H1_lomme/.vs/H1_lomme/v17/.suo
+H1_lomme/.vs/H1_lomme/v17/.suo
